hooktftp (1.0.0-beta) testing; urgency=low

  * Improvement: Sources tree refactoring
  * Feature: Logging with natuve syslog

 -- Raphael Medaer <raphael.medaer@straightforward.me>  Tue, 28 Apr 2015 12:55:44 +0200

hooktftp (0.9.1) unstable; urgency=low

  * Initial release based on hooktftp version 0.9.1

 -- Raphael Medaer <raphael.medaer@straightforward.me>  Thu, 23 Apr 2015 13:03:10 +0200